--- a/Online Notepad/index.html
+++ b/Online Notepad/index.html
@@ -5,9 +5,9 @@
 
     <meta name="viewport" content="">
     <title>Notepad</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
 
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
 </head>
 <body>
     <button onclick="sM(); return false">Email this</button><textarea contenteditable id=TE spellcheck=false placeholder="Write here.." autofocus></textarea>
